[package]
name = "wasm-playground"
version = "0.1.0"
authors = ["spinscale"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Override features to enable random numbers on the web.
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.69"
fixedbitset = "0.5.6"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
